kvx-macros/tests/macro/fail-segment-separator.rs
use kvx_macros::segment;
use kvx_types::Segment;

const SEGMENT: &Segment = segment!("te/st");

fn main() {}
